pleasee be fixedd

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PizzadminContext": "Server=DESKTOP-8BAG8JO\\SQLEXPRESS;Database=EdmiriTest;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "PizzadminContext": "Server=Edmir\\SQLEXPRESS;Database=Pizzadmin;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
